# inventory-be

./: .gitignore  pyproject.toml
.github/workflows/: python-application.yml
app/: crud.py  database.py  main.py  models.py  schema.py
